--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 div {
   font-family: 'Roboto Mono', monospace !important;
 }
-button {
+.ui button {
   font-family: 'Roboto Mono', monospace !important;
 }
 li {
@@ -26,13 +26,7 @@ h2 {
 
 }
 
-/* 
-@-webkit-keyframes fadeOut {
-  0%   {opacity: 1;}
-  70%  {opacity: 1;}
-  90% {opacity: 1;-webkit-transform: translateY(0px);}
-  100% {opacity: 0;-webkit-transform: translateX(-30px);}
-} */
+
 
 .container {
 
@@ -81,10 +75,25 @@ h2 {
   left: 20% ;
   right: 80%;
 
-/* 
+
   -webkit-animation: fadeOut 6s linear forwards;
   animation: fadeOut 6s linear forwards;
-  transform: translateX(200px); */
+  transform: translateX(200px);
+
+}
+#Aclass2{
+  /* margin-top : 30 px; */
+  min-width: 120px;
+  min-height:120px;
+  border-radius: 50%;
+  /* border: 1px solid pink; */
+  background-color: rgb(51, 48, 252);
+  display: inline-block;
+
+  position: fixed;
+  left: 20% ;
+  right: 80%;
+
 
 }
 
@@ -116,6 +125,23 @@ h2 {
 
 }
 
+
+#Bclass2{
+  /* margin-top : 30 px; */
+  min-width: 120px;
+  min-height:120px;
+  border-radius: 50%;
+  /* border: 1px solid pink; */
+  background-color: rgb(101, 98, 248);
+  display: inline-block;
+
+  position: fixed;
+  left: 30% ;
+  right: 70%;
+
+
+}
+
 #bCube{
   position: fixed;
   left: 30% ;
@@ -140,6 +166,21 @@ h2 {
  
   animation: fadeOut 3s linear forwards;
   transition-timing-function: cubic-bezier(0.1, 0.7, 1.0, 0.1);
+}
+
+#Cclass2{
+  /* margin-top : 30 px; */
+  min-width: 120px;
+  min-height:120px;
+  border-radius: 50%;
+  /* border: 1px solid pink; */
+  background-color: blueviolet;
+  display: inline-block;
+
+  position: fixed;
+  left: 40% ;
+  right: 60%;
+ 
 }
 
 #cCube{
@@ -167,6 +208,22 @@ h2 {
   animation: fadeOut 3s linear forwards;
 }
 
+#Dclass2{
+  /* margin-top : 30 px; */
+  min-width: 120px;
+  min-height:120px;
+  border-radius: 50%;
+  /* border: 1px solid pink; */
+  background-color: rgb(226, 43, 180);
+  display: inline-block;
+
+  position: fixed;
+  left: 50% ;
+  right: 50%;
+
+
+}
+
 #dCube {
 
   position: fixed;
@@ -191,6 +248,19 @@ h2 {
 
   -webkit-animation: fadeOut 3s linear forwards;
   animation: fadeOut 3s linear forwards;
+}
+#Eclass2{
+  /* margin-top : 30 px; */
+  min-width: 120px;
+  min-height:120px;
+  border-radius: 50%;
+  /* border: 1px solid pink; */
+  background-color: rgb(226, 43, 89);
+  display: inline-block;
+
+  position: fixed;
+  left: 60% ;
+  right: 40%;
 }
 
 #eCube {
@@ -218,6 +288,22 @@ h2 {
   animation: fadeOut 3s linear forwards;
 }
 
+#Fclass2{
+  /* margin-top : 30 px; */
+  min-width: 120px;
+  min-height:120px;
+  border-radius: 50%;
+  /* border: 1px solid pink; */
+  background-color: rgb(226, 141, 43);
+  display: inline-block;
+
+  position: fixed;
+  left: 70% ;
+  right: 30%;
+
+
+}
+
 #fCube{
   position: fixed;
   left: 70% ;
@@ -241,6 +327,20 @@ h2 {
 
   -webkit-animation: fadeOut 3s linear forwards;
   animation: fadeOut 3s linear forwards;
+}
+
+#Gclass2{
+  /* margin-top : 30 px; */
+  min-width: 120px;
+  min-height:120px;
+  border-radius: 50%;
+  /* border: 1px solid pink; */
+  background-color: rgb(226, 198, 43);
+  display: inline-block;
+
+  position: fixed;
+  left: 80% ;
+  right: 20%;
 }
 
 #gCube{
@@ -826,4 +926,34 @@ h2 {
 @-webkit-keyframes animate {
   0% { left: -0px; }
   100% { left: -30px;}
+}
+
+.yoursong{
+
+  position: relative;
+
+}
+
+.headertext {
+
+  text-decoration-color: black !important;
+}
+
+
+#outer-2{
+ padding-top: 30px;
+
+  display:none;
+  width: 100%;
+  text-align: center;
+  bottom: 20%;
+}
+
+#inner-2 {
+  display: inline-block;
+}
+
+canvas{
+
+  margin-top: 40px;
 }
